[gd_scene load_steps=12 format=2]

[ext_resource path="res://Assets/Bullet.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Bullet.gd" type="Script" id=2]
[ext_resource path="res://Assets/Bullet2.png" type="Texture" id=3]

[sub_resource type="Animation" id=2]
resource_name = "Die"
step = 0.04
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.04, 0.08, 0.12, 0.16 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 3 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.16 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "die2"
} ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="CircleShape2D" id=1]
radius = 3.16228

[sub_resource type="Gradient" id=5]
offsets = PoolRealArray( 0, 0.357143, 0.587302, 0.801587 )
colors = PoolColorArray( 1, 0.980392, 0.933333, 1, 0.870588, 0.776471, 0.662745, 0.870588, 1, 0.921569, 0.780392, 0.756863, 0.87451, 0.678431, 0.580392, 0.572549 )

[sub_resource type="GradientTexture" id=8]
gradient = SubResource( 5 )

[sub_resource type="Curve" id=7]
max_value = 100.0
_data = [ Vector2( 0.0268456, 2.04546 ), 0.0, -48.6247, 0, 0, Vector2( 0.932886, 100 ), 452.179, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=9]
curve = SubResource( 7 )

[sub_resource type="ParticlesMaterial" id=4]
lifetime_randomness = 0.09
flag_disable_z = true
direction = Vector3( 0, 0, 0 )
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 53.84
initial_velocity_random = 0.46
orbit_velocity = 0.0
orbit_velocity_random = 0.0
damping = 78.57
damping_random = 0.46
damping_curve = SubResource( 9 )
color_ramp = SubResource( 8 )

[node name="Node2D" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Hit" type="Sprite" parent="."]
visible = false
texture = ExtResource( 3 )
hframes = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="Hit"]
anims/Die = SubResource( 2 )
anims/RESET = SubResource( 3 )

[node name="Area2D" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="LifeTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true
autostart = true

[node name="Particles2D" type="Particles2D" parent="."]
emitting = false
lifetime = 0.4
one_shot = true
speed_scale = 1.25
explosiveness = 0.9
randomness = 0.77
process_material = SubResource( 4 )

[connection signal="timeout" from="LifeTimer" to="." method="_on_LifeTimer_timeout"]
